<resources>
    <string name="app_name">租之助</string>
    <string name="loginEt_Name_hint">Name</string>
    <string name="loginEt_PasswordCheck_hint">PasswordCheck</string>
    <string name="loginEt_Phone_hint">Phone</string>
    <string name="loginBtn_Back_hint">返回</string>
    <string name="button">Button</string>
    <string name="playstation">PlayStation</string>
    <string name="xbox">XBox</string>
    <string name="Switch">Switch</string>
    <string name="ps5"><u>PS5</u></string>
    <string name="ps4"><u>PS4</u></string>
    <string name="other"><u>其他主機</u></string>
    <string name="series"><u>Series</u></string>
    <string name="xboxone"><u>One</u></string>
    <string name="switch_game"><u>Switch</u></string>
    <string name="price_chinese">價格</string>
    <string name="setAccount"><u>帳號設定</u></string>
    <string name="seemore"><u><![CDATA[查看更多 >]]></u></string>
    <string name="PlaystationNewsInfo">PlayStation</string>
    <string name="XBoxNewsInfo">XBox</string>
    <string name="SwitchNewsInfo">Switch</string>
    <string name="OtherNewsInfo">Other</string>
    <string name="TableGameNewsInfo">BoardGame</string>
    <string name="loginFail">資料或密碼輸入錯誤</string>
    <string name="phone">Phone</string>
    <string name="name">Name</string>
    <string name="veritycode">VerityCode</string>
    <string name="passworkcheck">PassworkCheck</string>
    <string name="password">Password</string>
    <string name="sendVertycode">驗證</string>
    <string name="e_mail">E-mail</string>
    <string name="slogon">遊戲的租借買賣都在這裡!</string>
    <string name="forgotpassword">忘記密碼?</string>
    <string name="ch_register">註冊</string>
    <string name="ch_cancel">取消</string>
    <string name="ch_confirm">確認</string>
    <string name="ch_login">登入</string>
    <string name="projectName">租之助</string>
    <string name="ch_myStore">我的賣場</string>
    <string name="salerInfo">賣家資訊</string>
    <string name="ch_call">稱呼：</string>
    <string name="ch_address">地區：</string>
    <string name="ch_phone">聯絡電話：</string>
    <string name="e_mail_">E-mail：</string>
    <string name="ch_exchangemode">交易模式：</string>
    <string name="ch_onlyAmmount">剩餘數量：</string>
    <string name="ch_needAmmount">需求數量：</string>
    <string name="ch_edit">編輯</string>
    <string name="ch_wishlist">願望清單</string>
    <string name="ch_needWeight">需要權重：</string>
    <string name="ch_currentWeight">目前權重：</string>
    <string name="ch_weight">權重：</string>
    <string name="ch_message">留言板</string>
    <string name="ch_inputMessage">請輸入訊息</string>
    <string name="ch_orderState">訂單狀態：</string>
    <string name="ch_tradeQuantity">交易數量：</string>
    <string name="ch_Home">租之助</string>
</resources>