<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/clLogin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textColor="@color/TextMainColor"
        android:textSize="100sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvSlogan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textColor="@color/TextMainColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/et_bg_selector"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:textColor="@color/TextMainColor"
        android:textColorHint="@color/white1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.37" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnVerityCode"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:textSize="13sp"
        android:text="@string/sendVertycode"
        android:theme="@style/Theme.MaterialComponents.Light"
        app:backgroundTint="@color/TitleBackgroundColor"
        app:cornerRadius="5dp"
        app:layout_constraintStart_toEndOf="@+id/etEmail"
        app:layout_constraintTop_toTopOf="@+id/etEmail" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/et_bg_selector"
        android:ems="10"
        android:inputType="textPassword"
        android:textColor="@color/TextMainColor"
        android:textColorHint="@color/white1"
        app:layout_constraintStart_toStartOf="@+id/etEmail"
        app:layout_constraintTop_toBottomOf="@+id/etEmail" />

    <EditText
        android:id="@+id/etPassworkCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/et_bg_selector"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:textColor="@color/TextMainColor"
        android:textColorHint="@color/white1"
        app:layout_constraintStart_toStartOf="@+id/etPassword"
        app:layout_constraintTop_toBottomOf="@+id/etPassword" />

    <EditText
        android:id="@+id/etVerityCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/et_bg_selector"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:textColor="@color/TextMainColor"
        android:textColorHint="@color/white1"
        app:layout_constraintStart_toStartOf="@+id/etPassworkCheck"
        app:layout_constraintTop_toBottomOf="@+id/etPassworkCheck" />

    <EditText
        android:id="@+id/etName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/et_bg_selector"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:textColor="@color/TextMainColor"
        android:textColorHint="@color/white1"
        app:layout_constraintStart_toStartOf="@+id/etVerityCode"
        app:layout_constraintTop_toBottomOf="@+id/etVerityCode" />

    <EditText
        android:id="@+id/etPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/et_bg_selector"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:textColor="@color/TextMainColor"
        android:textColorHint="@color/white1"
        app:layout_constraintStart_toStartOf="@+id/etName"
        app:layout_constraintTop_toBottomOf="@+id/etName" />


    <TextView
        android:id="@+id/tvForgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_marginTop="5dp"
        android:layout_weight="1"
        android:textColor="@color/white1"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPassword" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogin"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/ch_login"
        android:textSize="18sp"
        android:theme="@style/Theme.MaterialComponents.Light"
        app:backgroundTint="@color/ButtonColor"
        app:cornerRadius="20dp"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etName" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnRegister"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/ch_register"
        android:textSize="18sp"
        android:theme="@style/Theme.MaterialComponents.Light"
        app:backgroundTint="@color/ButtonColor"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvErrorMessage" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCancel"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textSize="18sp"
        android:theme="@style/Theme.MaterialComponents.Light"
        app:backgroundTint="@color/nocolor"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnRegister"
        app:strokeColor="@color/white"
        app:strokeWidth="1dp" />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnConfirm"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_marginTop="10dp"
        android:text="@string/ch_confirm"
        android:textSize="18sp"
        android:theme="@style/Theme.MaterialComponents.Light"
        app:backgroundTint="@color/nocolor"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        app:strokeColor="@color/white"
        app:strokeWidth="1dp" />

    <TextView
        android:id="@+id/tvErrorMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPhone" />
</androidx.constraintlayout.widget.ConstraintLayout>